# wriggling-pandas

./: .gitignore  Cargo.toml  README.md
resources/: LICENSE  conf.toml
src/: color_picker.rs  gameboard.rs  gameboard_controller.rs  main.rs
src/actors/: bullet.rs  mod.rs  panda.rs  sensor.rs
